--- a/application/index.html
+++ b/application/index.html
@@ -49,7 +49,7 @@
         <p>
             Ce projet est une intiative de <a href="http://www.bsimard.com" title="Benoît Simard">Benoît Simard</a>. Les sources sont sous la <a target="_blank" title="Licence GPL" href="http://www.gnu.org/licenses/gpl.html">GNU General Public Licence (GPL)</a> et hébergées sur <a target="_blank" href="https://github.com/sim51/hack2012-carte">github</a>. 
             <br/>
-            Les données du site proviennent de la plateforme opendata de la ville de Nantes, Nantes Métropole, du conceil général de loire atlantique et de la région pays de la loire.
+            Les données du site proviennent de la plateforme opendata de la ville de Nantes, Nantes Métropole, du conseil général de loire atlantique et de la région pays de la loire.
         </p>
     </footer>
 
