changing brand name

--- a/application/index.html
+++ b/application/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fr" ng-app="hack2012">
   <head>
-    <title>LogiSima - Hack2012</title>
+    <title>Vous cherchez ?</title>
     <meta charset="utf-8">
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css" />
@@ -19,7 +19,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a href="./index.html" class="brand">Hack 2012</a>
+          <a href="./index.html" class="brand">Vous cherchez ?</a>
         </div>
       </div>
     </div>
