--- a/application/index.html
+++ b/application/index.html
@@ -62,6 +62,10 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
     <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
     <script type="text/javascript">
+      var ici = L.icon({
+          iconUrl: './img/ici.png',
+          iconSize: [35,35]
+      });
       var musee = L.icon({
           iconUrl: './img/musee.png',
           iconSize: [32,37]
